fix(ui/dashboard): show message only if table is visible

--- a/app/assets/stylesheets/app/dashboard.scss
+++ b/app/assets/stylesheets/app/dashboard.scss
@@ -25,6 +25,7 @@
   width: $max-width - (176px * 2);
   margin: 0 auto;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .info__description {
